# goit-pythonweb-hw-06

./: Dockerfile  alembic.ini  app.py  docker-compose.yml  pyproject.toml  seed.py  testtt.py
alembic/: env.py
alembic/versions/: 056186a9a6ad_test.py  760e0c0195d8_create_models.py  bb09ec9fd110_add_data.py
src/database/: connect.py  models.py
src/repository/: my_select.py
