[project]
name = "hw-6"
version = "0.1.0"
description = "home work 6"
authors = [
    {name = "ViktorBond7",email = "141341341+ViktorBond7@users.noreply.github.com"}
]
requires-python = ">=3.11"
dependencies = [
    "alembic (>=1.18.4,<2.0.0)",
    "faker (>=40.15.0,<41.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)"
]
